sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaiyo_deployment_1
  namespace: kaiyo_1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: public.ecr.aws/nginx/nginx:1.21
          ports:
            - name: tcp
              containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaiyo_deployment_2
  namespace: kaiyo_2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: public.ecr.aws/nginx/nginx:1.21
          ports:
            - name: tcp
              containerPort: 80
