ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: kaiyo_1
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: kaiyo
spec:
  rules:
    - host: a.kaiyo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kaiyo_service_1
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: kaiyo_2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: kaiyo
spec:
  rules:
    - host: b.kaiyo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kaiyo_service_2
                port:
                  number: 80
